<resources>
    <string name="app_name">Healthy Smile</string>
    <string name="app_logo_icon">App Logo Icon</string>
    <string name="logo_text">Healthy Smile</string>
    <string name="skip">Skip</string>
    <string name="find_a_lot_of_specialist_ndoctors_in_one_place">Find a lot of specialist \ndoctors in one place</string>
    <string name="consult_only_with_a_doctor_nyou_trust">Consult only with a doctor \nyou trust</string>
    <string name="get_connect_our_online_nconsultation">Get connect our Online\nConsultation</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="login_to_enjoy_the_features_we_ve">Login to enjoy the features we\'ve</string>
    <string name="provided_and_stay_healthy">provided, and stay healthy!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="i_agree_to_the_healthy_smile">I agree to the Healthy Smile</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="yeay_welcome_back">Yeay! Welcome Back</string>
    <string name="once_again_you_login_successfully">Once again you login successfully</string>
    <string name="go_to_home">Go to home</string>
    <string name="success">Success</string>
    <string name="your_account_has_been_successfully">Your account has been successfully</string>
    <string name="registered">registered</string>
    <string name="into_healthy_smile_app">into Healthy Smile app</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_or_your_phone_number_we_will_send_you_confirmation_code">Enter your email or your phone number, we will send you confirmation code</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="create_new_password">Create New Password</string>
    <string name="create_your_new_password_to_login">Create your new password to login</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="you_have_successfully_reset_your">You have successfully reset your</string>
    <string name="password">password.</string>
    <string name="nextbutton">NextButton</string>
    <string name="logoimage">LogoImage</string>
    <string name="back">Back</string>
    <string name="i_am_doctor">I am doctor</string>
    <string name="email_is_mandatory">Email is mandatory</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="password_is_mandatory">Password is mandatory</string>
    <string name="weak_password_password_must_be_at_least_8_letters">Weak password, Password must be at least 8 letters</string>
    <string name="please_check_this_first">Please check this first</string>
    <string name="name_is_mandatory">Name is mandatory</string>
    <string name="name_must_start_with_letter">Name must start with letter</string>
    <string name="enter_code_that_we_have_sent_to_your_nnumber">Enter code that we have sent to your\nnumber</string>
    <string name="find_your_desired">Find your desired</string>
    <string name="health_solution">health solution</string>
    <string name="search_doctors">Search doctors</string>
    <string name="early_protection_for">Early protection for</string>
    <string name="your_family_health">your family health</string>
    <string name="learn_more">Learn more</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="see_all">See all</string>
    <string name="doctor_page">Doctor Page</string>
    <string name="chat">Chat Page</string>
    <string name="profile">Profile Page</string>
    <string name="scan">Scan Page</string>
    <string name="appointment">Appointment Page</string>
    <string name="dummy_doctor_name">Dr.Ahmed Ali</string>
    <string name="dummy_doctor_spec">Dentist</string>
    <string name="dummy_rating">4,7</string>
    <string name="dummy_distance">500m away</string>
    <string name="my_saved">My Saved</string>
    <string name="appointment_txt">Appointment</string>
    <string name="payment_method">Payment Method</string>
    <string name="user_guide">User Guide</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_to_log_out_of">Are you sure to log out of</string>
    <string name="your_account">your account?</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="submit_image">Submit Xray Image</string>
    <string name="error">Error has happened</string>
    <string name="sorry_it_is_not_an_xray_image">Sorry, this is not a xray image</string>
    <string name="success_sent">Success</string>
    <string name="a_verification_email_has_been_successfully">A Verification Email has been successfully</string>
    <string name="sent_to_you_please_check_your_mail">Sent to you ,Please Check your mail</string>
    <string name="go_to_login_page">Go To Login Page</string>
    <string name="top_doctor">Top Doctor</string>
    <string name="doctor_search">Doctor Search</string>
    <string name="doctor_detail">Doctor Detail</string>
    <string name="about">About</string>
    <string name="pick_a_date">Pick A Date</string>
    <string name="pick_a_time">Pick A Time</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="no_time_selected">No Time Selected</string>
    <string name="selected_date_and_time">Selected Date And Time</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="appointment_success">Appointment Success</string>
    <string name="your_appointment_has_been_successfully">Your Appointment has been successfully</string>
    <string name="created_you_can_have_a_consultation_session">Created, you can have a consultation session</string>
    <string name="with_your_trusted_doctor">with your trusted doctor</string>
    <string name="chat_doctor">Chat Doctor</string>
    <string name="schedule">Schedule</string>
    <string name="reschedule_txt">Reschedule</string>
    <string name="cancel_txt">Cancel</string>
    <string name="confirmed">Confirmed</string>
    <string name="no_data_found">No data found</string>
    <string name="scan_txt">Scan</string>
    <string name="profile_txt">Profile</string>
    <string name="type_message">Type message ...</string>
    <string name="send">Send</string>
    <string name="no_data_found_messages">No Data Found</string>
    <string name="message">Message</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="no_appointments_yet">No Appointments Yet</string>
    <string name="no_messages_yet">No Messages Yet</string>
    <string name="chat_with_gemini">Chat With Chatbot</string>
    <string name="capture_image">Capture Real Image</string>
    <string name="add_notes">Add Notes</string>
    <string name="type_your_notes_here">Type Your Notes Here...</string>
    <string name="notes">Notes:</string>
    <string name="your_doctors_notes">Your Doctor Notes</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="loading">Loading...</string>
    <string name="code">Code</string>
    <string name="_20">+2</string>
    <string name="star_txt">*</string>
    <string name="mandatory">Mandatory</string>
    <string name="name_should_start_with_capital_letter">Name should start with capital letter</string>
    <string name="phone_should_contains_11_digit">Phone should contains 11 digit</string>
    <string name="email_should_be_like_this_example123_example_com">Email should be like this : example123@example.com</string>
    <string name="password_should_contains_at_least_8_characters">Password should contains at least 8 characters</string>
    <string name="upload_image_or_capture_na_real_one_to_see_diseases">Upload image or capture\na real one to see diseases</string>
    <string name="no_notes_yet">No Notes Yet</string>
    <string name="chat_with_ai">chat with ai</string>
    <string name="tips_for_capture_image_n_n_light_it_up_natural_light_is_best_but_avoid_harsh_shadows_indoors_use_bright_white_light_skip_the_flash_it_creates_glare_n_steady_does_it_hold_your_phone_still_or_use_a_tripod_for_sharp_focused_pics_n_focus_on_your_smile_make_sure_your_teeth_are_the_stars_no_fingers_hair_or_other_objects_blocking_the_view_n_multiple_angles_capture_close_up_shots_from_the_front_back_and_sides_of_the_teeth_you_re_concerned_about_n_show_your_smile_gently_pull_back_your_lips_and_keep_your_mouth_slightly_open_for_a_clear_view_smile_naturally_n_clean_and_clear_brush_your_teeth_beforehand_to_remove_anything_hiding_your_pearly_whites">
        Tips for capture image :\n\n
        - Light it Up:
        Natural light is best, but avoid harsh shadows. Indoors, use bright white light. Skip the flash, it creates glare.\n
        - Steady Does It:
        Hold your phone still or use a tripod for sharp, focused pics.\n
        - Focus on Your Smile:
        Make sure your teeth are the stars! No fingers, hair, or other objects blocking the view.\n
        - Multiple Angles:
        Capture close-up shots from the front, back, and sides of the teeth you\'re concerned about.\n
        - Show Your Smile:
        Gently pull back your lips and keep your mouth slightly open for a clear view. Smile naturally!\n
        - Clean and Clear:
        Brush your teeth beforehand to remove anything hiding your pearly whites.
    </string>
    <string name="your_image">Your Image</string>
    <string name="result_image">Result Image</string>
    <string name="your_history">Your History</string>
    <string name="language">Language</string>
    <string name="menu">Menu</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_language">Change Language</string>
    <string name="close">Close</string>
    <string name="your_patients">Your Patients</string>
    <string name="no_patients_yet">No Patients Yet</string>
    <string name="scan_xray_image">Scan Xray Image</string>
    <string name="pick_real_image_from_gallery">Pick Real Image From Gallery</string>
    <string name="capture_real_image">Capture Real Image</string>
    <string name="scan_your_image">Scan Your Image</string>
    <string name="copy_results">Copy Results</string>
    <string name="detailed_scan">Detailed Scan</string>
    <string name="chatbot">Chat With ChatBot</string>
    <string name="gemini">Chat With Gemini</string>
    <string name="my_patient_s_saved">My Patient\'s Saved</string>
    <string name="chat_with_gemini_2">Chat With Gemini</string>
</resources>