<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".View.Activity.OnboardingFourActivity">
    <ImageView
        android:id="@+id/user_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/theme"
        app:layout_constraintTop_toTopOf="@id/user_guide"
        app:layout_constraintBottom_toBottomOf="@id/user_guide"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:checked="false"
        app:thumbIcon="@drawable/ic_light_mode"
        app:thumbTint="@color/background_color"
        app:thumbIconTint="@color/main_color"
        app:trackTint="@color/main_color"
        app:trackDecorationTint="@color/main_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
    <ImageView
        android:id="@+id/logo_image"
        app:layout_constraintTop_toTopOf="@id/g1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logoimage"
        android:src="@drawable/ic_new_logo"
        android:layout_width="85dp"
        android:layout_height="85dp" />
    <TextView
        android:id="@+id/logo_text"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="@id/logo_image"
        app:layout_constraintEnd_toEndOf="@id/logo_image"
        android:text="@string/logo_text"
        android:textColor="@color/main_color"
        android:textSize="26sp"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <TextView
        android:id="@+id/header"
        app:layout_constraintTop_toBottomOf="@id/g2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/let_s_get_started"
        android:textSize="22sp"
        android:textColor="@color/text_color"
        android:textFontWeight="800"
        android:fontFamily="@font/nunito_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/p1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        android:text="@string/login_to_enjoy_the_features_we_ve"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textFontWeight="600"
        android:fontFamily="@font/nunito_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/p2"
        app:layout_constraintTop_toBottomOf="@id/p1"
        app:layout_constraintStart_toStartOf="@id/p1"
        app:layout_constraintEnd_toEndOf="@id/p1"
        android:text="@string/provided_and_stay_healthy"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textFontWeight="600"
        android:fontFamily="@font/nunito_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        app:layout_constraintTop_toBottomOf="@id/g3"
        app:layout_constraintStart_toStartOf="@id/p1"
        app:layout_constraintEnd_toEndOf="@id/p1"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/background_color"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="500"
        android:padding="15dp"
        app:cornerRadius="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/login"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textColor="@color/main_color"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="500"
        android:padding="15dp"
        app:strokeColor="@color/main_color"
        app:strokeWidth="1.5dp"
        android:backgroundTint="@color/background_color"
        app:cornerRadius="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/language"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        app:layout_constraintStart_toStartOf="@id/signUp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/language_layout"
        app:layout_constraintTop_toTopOf="@id/language"
        app:layout_constraintBottom_toBottomOf="@id/language"
        app:layout_constraintStart_toEndOf="@id/language"
        app:layout_constraintEnd_toEndOf="@id/signUp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/language"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>