<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="30dp"
    tools:context=".View.Activity.ResetPasswordActivity">
    <ImageView
        android:id="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.075"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/forgot_password_title"
        app:layout_constraintTop_toBottomOf="@id/g1"
        app:layout_constraintStart_toStartOf="@id/back_button"
        android:text="@string/forgot_your_password"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="900"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt1"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_title"
        app:layout_constraintStart_toStartOf="@id/forgot_password_title"
        android:layout_marginTop="15dp"
        android:text="@string/enter_your_email_or_your_phone_number_we_will_send_you_confirmation_code"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="700"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.285"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/layout"
        app:layout_constraintTop_toBottomOf="@id/g2"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/background_forget_password"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/email_btn"
            android:clickable="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/main_color"
            android:fontFamily="@font/nunito"
            android:textFontWeight="900"
            android:textSize="15sp"
            android:layout_margin="3dp"
            android:background="@drawable/background_forget_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/phone_btn"
            android:clickable="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phone"
            android:fontFamily="@font/nunito"
            android:textFontWeight="900"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_phone_layout"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxBackgroundColor="@color/grey_background"
        app:boxStrokeColor="@color/grey_stroke"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/main_color"
        android:layout_marginTop="25dp"
        app:boxStrokeWidth="1.5dp"
        android:hint="@string/enter_your_email"
        app:hintTextColor="@color/grey"
        app:errorEnabled="true"
        app:errorTextColor="@color/error_color"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorIconTint="@color/error_color"
        app:cursorErrorColor="@color/error_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email_phone"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_regular"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textFontWeight="800" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_password_btn"
        app:layout_constraintTop_toBottomOf="@id/email_phone_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        app:cornerRadius="20dp"
        android:text="@string/reset_password"
        android:textColor="@color/background_color"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g00"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        app:layout_constraintTop_toBottomOf="@id/g00"
        app:layout_constraintStart_toStartOf="@id/reset_password_btn"
        app:layout_constraintEnd_toEndOf="@id/reset_password_btn"
        app:indicatorColor="@color/main_color"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>