<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/image"
        app:layout_constraintTop_toBottomOf="@id/g1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.515"
        android:backgroundTint="@color/background_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text1"
        app:layout_constraintTop_toBottomOf="@id/g2"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/image"
        android:text="@string/yeay_welcome_back"
        android:textColor="@color/text_color"
        android:textSize="22dp"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text2"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="@id/text1"
        app:layout_constraintEnd_toEndOf="@id/text1"
        android:layout_marginTop="10dp"
        android:text="@string/once_again_you_login_successfully"
        android:textColor="@color/grey"
        android:textSize="16dp"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text3"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintStart_toStartOf="@id/text2"
        app:layout_constraintEnd_toEndOf="@id/text2"
        android:layout_marginTop="8dp"
        android:text="@string/into_healthy_smile_app"
        android:textColor="@color/grey"
        android:textSize="16dp"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_to_home"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintStart_toStartOf="@id/text1"
        app:layout_constraintEnd_toEndOf="@id/text1"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        app:cornerRadius="20dp"
        android:text="@string/go_to_home"
        android:textColor="@color/background_color"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="600"
        android:textSize="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <View
        app:layout_constraintTop_toBottomOf="@id/go_to_home"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>