<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text1"
        app:layout_constraintTop_toBottomOf="@id/g1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/menu"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/theme_txt"
        app:layout_constraintTop_toBottomOf="@id/g2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/change_theme"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/theme"
            app:layout_constraintTop_toTopOf="@id/theme_txt"
            app:layout_constraintBottom_toBottomOf="@id/theme_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="25dp"
            android:checked="false"
            app:thumbIcon="@drawable/ic_light_mode"
            app:thumbTint="@color/background_color"
            app:thumbIconTint="@color/main_color"
            app:trackTint="@color/main_color"
            app:trackDecorationTint="@color/main_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/language_txt"
        app:layout_constraintTop_toBottomOf="@id/g3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/change_language"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/language_layout"
        app:layout_constraintTop_toTopOf="@id/language_txt"
        app:layout_constraintBottom_toBottomOf="@id/language_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/language_txt"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="30dp"
        android:hint="@string/language"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        app:layout_constraintTop_toBottomOf="@id/g4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="15dp"
        android:paddingHorizontal="35dp"
        android:layout_marginBottom="50dp"
        app:cornerRadius="20dp"
        android:text="@string/close"
        android:textColor="@color/background_color"
        android:fontFamily="@font/nunito_regular"
        android:textFontWeight="600"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        app:layout_constraintTop_toBottomOf="@id/close"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>